@@ -2,7 +2,7 @@
 # SportsTracker resources for english language (default)
 # 
 # Version: SportsTracker 7.0.0
-# Last update: 2015/01/12
+# Last update: 2015/01/22
 # 
 # (C) 2015, Stefan Saring
 #####################################################################
@@ -34,7 +34,7 @@ st.main.error.missing_exercise_files=The exercise files attached to the followin
 st.main.error.save_data=Failed to save application data!\nSee console output for more detailed informations.
 st.main.confirm.save_exit.title=Save Changes
 st.main.confirm.save_exit.text=Do you want to save your changes?
-st.main.confirm.define_first_sporttype=There are no sport types defined yet, so exercises can't be added. Do you want to define a sport type now?
+st.main.info.initial_sporttypes_added=An initial set of sport types has been added, you can edit and extend it in the Sport Type Editor.
 st.main.error.no_sporttype=You need to create at least one sport type first!
 st.main.error.no_exercise=You need to create at least one exercise first!
 st.main.error.no_note=You need to create at least one note first!
@@ -171,6 +171,18 @@ st.weightlistview.comment=Comment
 st.weightlistview.empty=No weight entries available
 st.weightlistview.print.title=SportsTracker - Weight List
 st.weightlistview.print.page=Page
+
+# Initial sport types created when there there are no defined
+st.initial_sporttypes.cycling=Cycling
+st.initial_sporttypes.cycling.mtb_tour=MTB tour
+st.initial_sporttypes.cycling.mtb_race=MTB race
+st.initial_sporttypes.cycling.road_tour=Road tour
+st.initial_sporttypes.cycling.road_race=Road race
+st.initial_sporttypes.running=Running
+st.initial_sporttypes.running.street_run=Street run
+st.initial_sporttypes.running.street_race=Street race
+st.initial_sporttypes.running.trail_run=Trail run
+st.initial_sporttypes.running.trail_race=Trail race
 
 # Sport Type List dialog
 st.dlg.sporttype_list.title=Edit Sport Type List
