@@ -2,7 +2,7 @@
 # SportsTracker resources for german language
 # 
 # Version: SportsTracker 7.0.0
-# Last update: 2015/01/12
+# Last update: 2015/01/22
 # 
 # (C) 2015, Stefan Saring
 # Translated by Stefan Saring <projects@saring.de>
@@ -32,7 +32,7 @@ st.main.error.missing_exercise_files=Die HRM Dateien der folgenden Einheiten kon
 st.main.error.save_data=Die Anwendungsdaten konnten nicht gespeichert werden!\nWeitere Informationen entnehmen Sie bitte der Konsole.
 st.main.confirm.save_exit.title=Speichern
 st.main.confirm.save_exit.text=M\u00f6chten Sie die \u00c4nderungen speichern?
-st.main.confirm.define_first_sporttype=Es wurden noch keine Sportarten definiert, Einheiten k\u00f6nnen somit nicht erfasst werden. M\u00f6chten Sie eine Sportart definieren?
+st.main.info.initial_sporttypes_added=Eine Liste initialer Sportarten wurde hinzugef\u00fcgt, diese kann im Sportart Editor angepasst und erweitert werden.
 st.main.error.no_sporttype=Sie m\u00fcssen zuerst eine Sportart definieren!!
 st.main.error.no_exercise=Sie m\u00fcssen zuerst mindestens eine Einheit eintragen!
 st.main.error.no_note=Sie m\u00fcssen zuerst mindestens eine Notiz eintragen!
@@ -170,6 +170,18 @@ st.weightlistview.comment=Bemerkung
 st.weightlistview.empty=Keine Gewichtseintr\u00e4ge vorhanden
 st.weightlistview.print.title=SportsTracker - Liste der Gewichtseintr\u00e4ge
 st.weightlistview.print.page=Seite
+
+# Initial sport types created when there there are no defined
+st.initial_sporttypes.cycling=Radfahren
+st.initial_sporttypes.cycling.mtb_tour=MTB Tour
+st.initial_sporttypes.cycling.mtb_race=MTB Rennen
+st.initial_sporttypes.cycling.road_tour=Rennrad Tour
+st.initial_sporttypes.cycling.road_race=Rennrad Rennen
+st.initial_sporttypes.running=Laufen
+st.initial_sporttypes.running.street_run=Stra\u00dfen-Lauf
+st.initial_sporttypes.running.street_race=Stra\u00dfen-Rennen
+st.initial_sporttypes.running.trail_run=Gel\u00e4nde-Lauf
+st.initial_sporttypes.running.trail_race=Gel\u00e4nde-Rennen
 
 # Sport Type List dialog
 st.dlg.sporttype_list.title=Sportarten bearbeiten
