@@ -28,6 +28,8 @@ v7.0.0:
       application startup only (renamed to 'initial optional fields')
   - Calendar View: redesigned look (colors, fonts, ...)
   - Calendar View and Overview Diagram: bugfix for weeknumber calculation
+  - initial set of sport types is added when there are no sport types defined,
+    it makes the setup easier for new application users
 
  Translations:
   - added korean translation provided by Tae Young Ko <oscetic@gmail.com>
